lo que trabaje hoy, actualizo

--- a/Informe_final_seminario.tex
+++ b/Informe_final_seminario.tex
@@ -46,33 +46,33 @@ Una forma de propender al aumento de las capacidades para formular adecuadamente
 
 Debe tenerse en cuenta que la evaluación de textos es una tarea costosa en términos de tiempo y personal requerido. Además, no existe otro modo que evalúe mejor el aprendizaje de un estudiante que no sea mediante la expresión de sus ideas a través de un escrito, por lo que se debe repetir el ejercicio constantemente en el tiempo. Sumado a lo anterior, la cantidad de estudiantes ha crecido con el paso del tiempo, por lo que los costos de corregir y revisar textos se vuelven abrumadores \cite{t10}.
 
-Para disminuir los costos del personal requerido para revisar un texto, se han propuesto métodos para evaluar textos de manera automática, tarea conocida como {\em Automatic Essay Scoring}. Los primeros sistemas propuestos para esta tarea intentan evaluar características relacionadas a la calidad del texto tales como la dicción, uso de vocabulario, coherencia, entre otras. Para ello, se utiliza la ocurrencia de términos (conteo de signos de puntuación, largo de las palabras, entre otros). 
+Para disminuir los costos del personal requerido para revisar evaluaciones textuales a gran escala, se han propuesto métodos para evaluar textos de manera automática, tarea conocida como {\em Automatic Essay Scoring}. Los primeros sistemas propuestos para esta tarea intentan evaluar características relacionadas a la calidad del texto tales como la dicción, uso de vocabulario, coherencia, entre otras. Para ello, se utiliza la ocurrencia de términos (conteo de signos de puntuación, largo de las palabras, entre otros). 
 
 Sin embargo, este método de evaluación automática de textos tiene algunas debilidades \cite{t9}\cite{t24}\cite{t25}:
 
 \begin{itemize}
 	\item No se evalúa la extructura sintáctica del texto, pues no considera el orden de las palabras. Por ejemplo, la oración {\em ``El árbol está seco.''} sería equivalente a {\em ``seco el está árbol.''} Un evaluador humano consideraría diferentes las oraciones.
-	\item No se considera la cohesión de un texto, lo que trae como consecuencia que no se evalúa la calidad del texto en términos del correcto uso de recursos lingüísticos para expresar las ideas. Por ejemplo el texto: {\em ``Los beneficios de la siesta son bien conocidos, aunque parece que quedan algunas cosas por aclarar. Manfred Walzl, neurólogo austriaco, pone en marcha un estudio; con un estudio él pretende demostrar que la siesta aumenta la productividad laboral''}, claramente tiene problemas de cohesión, los cuales pasan desapercibidos si sólo se considera frecuencia de términos.
-	\item No se considera el contenido sintáctico del texto. Por ejemplo, un sistema como el descrito previamente consideraría {\em ``Resfriado me habría la lluvia mojado con me si hubiera''} equivalente a {\em ``Si me hubiera mojado con la lluvia me habría resfriado''}.
-	\item Al estar basadas en medidas superficiales, cualquier sistema que utilice esta metodología será susceptible al engaño. Por ejemplo la siguiente definición: {\em ``Un campo magnético es una descripción matemática de la influencia magnética de las corrientes eléctricas y de los materiales magnéticos''}, podría ser reemplazada por {\em ``campo magnético valores corrientes electricidad matemática''}. La diferencia es que la primera considera la explicación de un concepto, la segunda es sólo un conjunto de palabras.
+	\item No se considera la cohesión de un texto, lo que trae como consecuencia que no se evalúa la calidad del texto en términos del correcto uso de recursos lingüísticos para expresar las ideas. Por ejemplo el texto: {\em ``Los beneficios de la siesta son bien conocidos, aunque parece que quedan algunas cosas por aclarar. Manfred Walzl, neurólogo austriaco, pone en marcha un estudio; con un estudio él pretende demostrar que la siesta aumenta la productividad laboral''}, tiene problemas de cohesión, como por ejemplo la repetición de la palabra estudio y tampoco queda claro que la segunda aparición de la palabra se refiera a lo mismo que se refiere la primera. El pronombre él aparece innecesariamente y es redundante luego de mencionar a Manfred Walzl. Estos problemas pasan desapercibidos si sólo se considera frecuencia de términos.
+	\item No se considera la estructura sintáctica del texto. Por ejemplo, se consideraría {\em ``Resfriado me habría la lluvia mojado con me si hubiera''} equivalente a {\em ``Si me hubiera mojado con la lluvia me habría resfriado''}.
+	\item No se considera la coherencia textual, pues las características con las que el método evalúa un texto no representan su contenido a nivel de las representaciones mentales que tendría un lector.
 	
 \end{itemize}
 
-Debido a los problemas mencionados, se debe establecer un método que considere propiedades de un texto coherente. La {\em evaluación automática de coherencia textual} \cite{t33} es un problema de investigación que aún se encuentra abierto y tiene múltiples aplicaciones, como por ejemplo: generación automática de resúmenes \cite{t34}\cite{t35}, traducción automática, generación automática de texto, entre otros. 
+ Debido a los problemas mencionados, nace la necesidad de poder evaluar automáticamente qué tan bien están expresadas las ideas en un texto y cuán coherentes son. La {\em evaluación automática de coherencia textual} \cite{t33} es un problema de investigación que aún se encuentra abierto y tiene múltiples aplicaciones, como por ejemplo: generación automática de resúmenes \cite{t34}\cite{t35}, traducción automática, generación automática de texto, entre otros. 
 
-Existen modelos para evaluar coherencia textual basados en la teoría de centrado \cite{t36}, la cual intenta caracterizar textos que puedan considerarse coherentes basándose en la forma en que se introducen y discuten {\em entidades de discurso}, que generalmente son: nombres (por ejemplo: Juan), descripciones (por ejemplo: ``El hombre barbudo''), pronombres (él, ella). Esta teoría considera la sintaxis del texto, mientras que lo propuesto en sistemas como PEG no.
+Existen métodos para evaluar coherencia textual basados en la teoría de centrado \cite{t36}, la cual intenta caracterizar textos que puedan considerarse coherentes basándose en la forma en que se introducen y discuten {\em entidades de discurso}, que generalmente incluyen: nombres (por ejemplo: Juan), descripciones (por ejemplo: ``El hombre barbudo''), pronombres (él, ella). Algunos problemas que tienen estos métodos están relacionados con la ambigüedad que presentan algunos textos, por ejemplo cuando se habla sobre múltiples entidades de discurso está el problema de a cuál se hace referencia. 
 
-Consecuentemente, se han realizado estudios que comparan el rendimiento de los distintos modelos para evaluar la coherencia textual (generalmente utilizando métricas como correlación con humanos), y se ha concluido que no existe modelo que evalúe todos los aspectos de un texto coherente. Sin embargo, también se ha concluido que los distintos modelos evalúan propiedades complementarias de coherencia \cite{t33}, por lo que el uso de diferentes modelos podría subsanar los problemas de los métodos para la evaluación automática de ensayos.
+Consecuentemente, se han realizado estudios que comparan el rendimiento de los distintos modelos para evaluar la coherencia textual (generalmente utilizando métricas como correlación con humanos), y se ha concluido que no existe modelo que evalúe todos los aspectos relacionados a la coherencia. Sin embargo, también se ha concluido que los distintos métodos evalúan propiedades complementarias de coherencia \cite{t33}.
 
 \subsection{Hipótesis}
 
-Un modelo que considera características sintácticas y semánticas para evaluar coherencia textual es más efectivo para la tarea de evaluación automática de ensayos en comparación a modelos que utilicen medidas superficiales de estas características (como conteo de palabras, largo de las oraciones, etc.).
+Un método que considera características sintácticas y semánticas para evaluar coherencia textual es más efectivo para la tarea de evaluación automática de ensayos en comparación a modelos que utilicen medidas superficiales de estas características (como conteo de palabras, largo de las oraciones, etc.).
 
 \subsection{Objetivos}
 \begin{itemize}
 	\item Objetivo General
 	\begin{itemize}
-		\item Desarrollar un modelo computacional que permita evaluar automáticamente textos en forma de ensayos considerando aspectos de coherencia textual.
+		\item Desarrollar un método computacional que permita evaluar automáticamente textos en forma de ensayos considerando aspectos de coherencia textual.
 	\end{itemize}
 	
 	\item Objetivos Específicos
@@ -88,34 +88,34 @@ Un modelo que considera características sintácticas y semánticas para evaluar co
 
 \section{Estado del Arte}
 
-La primera técnica para evaluar automáticamente ensayos fue PEG \cite{t0}.  Esta técnica modela un ensayo como una combinación lineal de características del texto, a las que se denominan {\em proxes}. Se consideran características superficiales tales como: la cantidad de palabras, largo del ensayo, cantidad de signos de puntuación utilizados, largo de las oraciones, etc. La metodología para la evaluación consta de dos etapas, una de entrenamiento y una de evaluación. En la etapa de entrenamiento se utilizan ensayos que ya tienen un puntaje asignado. Luego, se extraen las características superficiales de cada uno de ellos y se aplica un método de regresión lineal (multi-variable), de manera de ajustar las ponderaciones (pesos) de cada característica. Luego, el puntaje de un ensayo se calcula como se muestra en la ecuación \ref{eq0}.
+La primeras técnicas de evaluación automática de textos (como PEG \cite{t0})  modelan los textos como una combinación lineal de sus características intrínsicas (dicción, contenido, fluidez, etc.). Estas características intrínsicas se estiman mediante características superficiales ({\em proxes}) tales como: la cantidad de palabras, largo del ensayo, cantidad de signos de puntuación utilizados, largo de las oraciones, etc. La metodología para la evaluación consta de dos etapas, una de entrenamiento y una de evaluación. En la etapa de entrenamiento se utilizan textos que ya tienen un puntaje asignado. Luego, existe una fase de estracción de características para posteriormente aplicar una regresión lineal (multi-variable), de manera de ajustar las ponderaciones (pesos) de cada característica. Finalmente, el puntaje de un ensayo se calcula como se muestra en la ecuación \ref{eq0}.
 
 \begin{equation}
 	\label{eq0}
 	Puntaje = \beta_0 + \sum\limits_{i=1}^n \beta_iP_i
 \end{equation}
 
-Donde $\beta_i$ representa la ponderación correspondiente al {\em proxe} $P_i$. Los experimentos muestran que es posible obtener una correlación de 0.87 entre los puntajes asignados por PEG y los asignados por humanos\cite{t0}. Sin embargo, el sistema utiliza medidas indirectas de la calidad del texto a evaluar lo ha que sido criticado \cite{t9}. Las criticas argumentan que el uso de medidas indirectas deja al sistema vulnerable a engaños, porque los estudiantes podrían mejorar sus puntajes obtenidos mediante trucos, como por ejemplo escribir un ensayo más largo. También se ha argumentado que el uso de estas medidas indirectas no capturan características importantes como contenido, organización, y coherencia.
+Donde $\beta_i$ representa la ponderación correspondiente al {\em proxe} $P_i$. Los mejores resultados experimentales mostraron una correlación de 0.87 entre los puntajes asignados por PEG y los asignados por humanos \cite{t0}. Sin embargo, el método utiliza medidas indirectas de la calidad del texto a evaluar lo cual no deja al método exento de críticas \cite{t9}. El uso medidas indirectas deja al método vulnerable a engaños, ya que los estudiantes podrían mejorar sus puntajes obtenidos mediante trucos (por ejemplo escribir un texto más largo). Por otro lado, se ha argumentado que el uso de estas medidas indirectas no capturan características importantes tales como contenido, organización, y coherencia. La razón de ello es que el método se fundamenta únicamente en la frecuencia de aparición de cada {\em proxe} y no en el significado de lo que está esctrito ni en las relaciones que hay entre las ideas expresadas en el texto.
 
-Posteriores investigaciones se centraron en utilizar técnicas de {\em Recuperación de Información} (IR) \cite{t26} y {\em Procesamiento del Lenguaje Natural} (NLP) \cite{t27} para extraer características más directas del contenido y coherencia de un texto a evaluar como por ejemplo sus etiquetas léxicas. En recuperación de información, se representan los documentos con un modelo de espacio vectorial, como se muestra en la ecuación \ref{eq1}.
+Para poder evaluar el contenido de un texto, posteriores investigaciones se centraron en utilizar técnicas de {\em Recuperación de Información} (IR) \cite{t26} y {\em Procesamiento del Lenguaje Natural} (NLP) \cite{t27}. Para representar el contenido de un texto se utiliza un modelo de IR conocido como modelo de espacio vectorial. Este modelo considera un corpus (conjunto de documentos), el cual tiene asociado un vocabulario, que son las palabras que aparecen en los documentos del corpus (dimensiones del espacio). Teniendo este espacio vectorial, se puede representar un documento a partir de la frecuencia de aparición de los términos que lo componen, como se muestra en la ecuación \ref{eq1}.
 
 \begin{equation}
 	\label{eq1}
 	d = (w_1, w_2, ..., w_n)
 \end{equation}
 
-Donde cada componente del vector $d$ representa la frecuencia en que el término $w_i$ aparece en el documento. Los términos dependerán de la aplicación y pueden ser palabras, oraciones, párrafos, etc. En evaluación automática de ensayos se ha utilizado frecuencia de palabras para representar los documentos. Con esta representación vectorial se puede establecer una medida de similitud entre ensayos, como por ejemplo similitud coseno, que se muestra en \ref{eq2}.
+Donde cada componente del vector $d$ representa la frecuencia en que el término $w_i$ aparece en el documento. Los términos dependerán de la aplicación y pueden ser palabras, oraciones, párrafos, etc. Con esta representación vectorial se puede establecer una medida de similitud entre dos textos, como por ejemplo similitud coseno, que se muestra en \ref{eq2}.
 
 \begin{equation}
 	\label{eq2}
 	cos(d_i, d_j) = \frac{d_i\cdot d_j}{\|d_i\| \|d_j\|}
 \end{equation}
 
-Donde $d_i$ y $d_j$ son vectores que representan el contenido del ensayo. Teniendo esta medida de similitud y, utilizando un conjunto de ensayos pre-evaluados, se pueden evaluar automáticamente ensayos nuevos. Lo que se hace es calificar al ensayo nuevo con la misma nota que el más similar del repositorio de ensayos pre-evaluados.
+Donde $d_i$ y $d_j$ son vectores que representan el contenido del texto. Utilizando esta medida de similitud y, teniendo a disposición un conjunto de ensayos pre-evaluados, se pueden evaluar automáticamente ensayos nuevos, buscando para ello el ensayo pre-evaluado más similar.
 
-Se ha logrado una correlación de 0.76 entre los puntajes asignados por la técnica y los asignados por humanos\cite{t5}. Sin embargo, la evaluación depende fuertemente de la co-ocurrencia de términos, por lo que un ensayo que sea sólo un conjunto de palabras sin una conexión clara, podría llegar a ser bien evaluado\cite{t9}. Por otro lado, la técnica está puramente basada en ``palabras claves'' las cuales podrían no aparecer explícitamente en ensayos coherentes.
+Se ha logrado una correlación entre los puntajes asignados por la técnica y los asignados por humanos de 0.76 \cite{t5}. Sin embargo, la evaluación depende fuertemente de la co-ocurrencia de términos, por lo que un ensayo que sea sólo un conjunto de palabras sin una conexión clara, podría ser bien evaluado \cite{t9}. Por otro lado, la técnica está puramente basada en ``palabras claves'' las cuales podrían no aparecer explícitamente en los ensayos.
 
-Para abordar el problema anterior, se ha propuesto el uso de técnicas de reducción dimensional como el {\em Análisis Semántico Latente} (LSA) \cite{t28}. El Análisis Semántico Latente es una técnica que intenta extraer y representar los significados de las palabras. La técnica toma como supuesto que existe algo que subyace latente en la estructura semántica de los datos, y que está parcialmente oculto a causa de la elección aleatoria de palabras. LSA puede utilizarse para medir coherencia textual \cite{t8} \cite{t10} \cite{t20} \cite{t29}, y evaluar ensayos\cite{t9}. Para evaluar ensayos, se entrena LSA con un corpus de documentos, entre ellos ensayos pre-evaluados, y se obtiene un espacio semántico. Los ensayos nuevos son llevados a este espacio y se evalúan de acuerdo a algún criterio de similaridad como los descritos previamente\cite{t10}.
+Para abordar el problema de la ocurrencia de términos, se ha propuesto el uso de técnicas de reducción dimensional como el {\em Análisis Semántico Latente} (LSA) \cite{t28}. El Análisis Semántico Latente es una técnica que intenta extraer y representar los significados de las palabras. La técnica toma como supuesto que existe algo que subyace latente en la estructura semántica de los datos, y que está parcialmente oculto a causa de la elección aleatoria de palabras. LSA puede utilizarse para medir coherencia textual \cite{t8} \cite{t10} \cite{t20} \cite{t29}, y evaluar ensayos\cite{t9}. Para evaluar ensayos, se entrena LSA con un corpus de documentos, entre ellos ensayos pre-evaluados, y se obtiene un espacio semántico. Los ensayos nuevos son llevados a este espacio y se evalúan de acuerdo a algún criterio de similaridad como los descritos previamente\cite{t10}.
 
 Un problema con LSA es que al utilizar un modelo de bolsa de palabras no considera el orden de las mismas. Por ejemplo se consideraría equivalente ``literatura fantástica'' con ``fantástica literatura''. Tampoco considera cómo están escritas las oraciones. Podría tenerse un texto sin cohesión y ser bien evaluado si cumple con los criterios de similaridad establecidos.
 
